--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -73,6 +73,18 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimumSize">
+        <size>
+         <width>200</width>
+         <height>200</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>200</width>
+         <height>16777215</height>
+        </size>
+       </property>
        <layout class="QFormLayout" name="formLayout">
         <property name="sizeConstraint">
          <enum>QLayout::SetNoConstraint</enum>
@@ -90,7 +102,7 @@
          <widget class="QLabel" name="labelTECFrame">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-            <horstretch>0</horstretch>
+            <horstretch>10</horstretch>
             <verstretch>50</verstretch>
            </sizepolicy>
           </property>
@@ -101,22 +113,34 @@
             <bold>true</bold>
            </font>
           </property>
+          <property name="frameShape">
+           <enum>QFrame::Box</enum>
+          </property>
           <property name="text">
            <string>TEC controller</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
          <widget class="QCheckBox" name="checkboxTECLockAll">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>10</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="minimumSize">
+           <size>
+            <width>100</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="maximumSize">
            <size>
-            <width>16777215</width>
+            <width>100</width>
             <height>30</height>
            </size>
           </property>
@@ -134,14 +158,20 @@
         <item row="1" column="1">
          <widget class="QPushButton" name="buttonRefresh">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-            <horstretch>10</horstretch>
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <property name="minimumSize">
+           <size>
+            <width>50</width>
+            <height>0</height>
+           </size>
+          </property>
           <property name="maximumSize">
            <size>
-            <width>16777215</width>
+            <width>50</width>
             <height>30</height>
            </size>
           </property>
@@ -443,7 +473,20 @@
           <layout class="QHBoxLayout" name="horizontalLayout_13"/>
          </widget>
         </item>
-        <item row="14" column="0">
+        <item row="18" column="0">
+         <widget class="QCheckBox" name="checkBox">
+          <property name="font">
+           <font>
+            <family>Academy Engraved LET</family>
+            <pointsize>8</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Disable Siren</string>
+          </property>
+         </widget>
+        </item>
+        <item row="14" column="0" colspan="2">
          <layout class="QHBoxLayout" name="horizontalLayout_22">
           <item>
            <widget class="QLabel" name="labelFlashButtons">
@@ -539,19 +582,6 @@
            </widget>
           </item>
          </layout>
-        </item>
-        <item row="18" column="0">
-         <widget class="QCheckBox" name="checkBox">
-          <property name="font">
-           <font>
-            <family>Academy Engraved LET</family>
-            <pointsize>8</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>Disable Siren</string>
-          </property>
-         </widget>
         </item>
        </layout>
       </widget>
